notepad: Set "overflow: visible" to avoid bug in Firefox making scrolling difficult.

--- a/templates/prototypes/notes.css
+++ b/templates/prototypes/notes.css
@@ -35,6 +35,7 @@ pre.content {
   line-height: inherit;
   color: inherit;
   background-color: inherit;
+  overflow: visible;
   border: none;
   padding: 0;
   margin: 0;
